<resources>
    <string name="app_name">SotsuGyou</string>
    <string name="next">次へ</string>
    <string name="title_activity_doll_name_setting">DollNameSettingActivity</string>

    <string name="nameInputPleaseHint">名前を入力してください</string>
    <string name="passwordInputHint_old">旧パスワード</string>
    <string name="passwordInputHint_new">新パスワード</string>

    <string name="login_user_hint">ユーザ名</string>
    <string name="login_name_hint">表示名</string>
    <string name="login_password_hint">パスワード</string>
    <string name="login_passwordcheck_hint">パスワード再入力</string>

    <string name="login_registerRiyouCheck_title_1">利用情報</string>
    <string name="login_registerRiyouCheck_title_2">を同意する</string>

    <string name="login_rule_title">利用規約</string>
    <string name="login_rule_text">ご楽しいに利用してください</string>
    <string name="login_loginButton_text">ログイン</string>
    <string name="login_registerButton_text">新規登録</string>
    <string name="login_registerhint_title">アカウントは持っていない？</string>

    <string name="logout_button_text">ログアウト</string>
    <string name="save_button_text">保存</string>

    <string name="setting_account_setting_title">アカウント設定</string>

    <string name="setting_title">設定</string>
    <string name="setting_dollIcon_title">ぬいぐるみオリジナル設定</string>
    <string name="setting_dollName_title">ぬいぐるみ名前設定</string>
    <string name="setting_dollSetting_title">ぬいぐるみ設定</string>

    <string name="setting_account_title">アカウント設定</string>
    <string name="setting_accountName_title">表示名設定</string>
    <string name="setting_accountPassword_title">パスワード変更</string>
    <string name="setting_accountIcon_title">アイコン設定</string>

    <string name="setting_dollIcon_frame">太枠</string>
    <string name="setting_dollIcon_hat">帽子</string>
    <string name="setting_dollIcon_background">背景</string>

    <string name="setting_system_language_title">言語設定</string>

    <string name="login_title">ログイン</string>

    <string name="bottom_navigation_menu_item1_title">メイン</string>
    <string name="bottom_navigation_menu_item2_title">設定</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
