<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".Activity.UserSettingActivity.AccountPasswordSettingActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/returnbuttonicon"
        android:background="@color/grey"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_accountPassword_title"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="90dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/passwordInputHint_old"
        android:textAlignment="center"
        android:background="@drawable/edittextbackground"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/passwordInputHint_new"
        android:textAlignment="center"
        android:background="@drawable/edittextbackground"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/nextbutton_background"
        android:textSize="24sp"
        android:text="@string/save_button_text"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:paddingHorizontal="50dp"
        android:textColor="@color/white"/>

</LinearLayout>