<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity.LoginActivity">

    <ImageButton
        android:id="@+id/login_imageButton_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/backicon"
        android:background="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="90dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_user_hint"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="70dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/system_userinput_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/logineditviewbackground"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_password_hint"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/system_password_icon"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/logineditviewbackground"/>

    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:background="@drawable/loginbuttonbg"
        android:text="@string/login_loginButton_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/loginbuttonbg"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_registerhint_title"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:background="@drawable/loginbuttonbg"
        android:text="@string/login_registerButton_text"/>


</LinearLayout>