<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity.RegisterActivity">

    <ImageButton
        android:id="@+id/register_imageButton_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/backicon"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/login_registerButton_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittextbackground">

        <TextView
            android:id="@+id/register_userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_user_hint"
            android:layout_marginHorizontal="10dp"
            android:textSize="22sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/logineditviewbackground"/>

        <TextView
            android:id="@+id/register_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_name_hint"
            android:layout_marginHorizontal="10dp"
            android:textSize="22sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/logineditviewbackground"/>

        <TextView
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password_hint"
            android:layout_marginHorizontal="10dp"
            android:textSize="22sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/logineditviewbackground"/>

        <TextView
            android:id="@+id/register_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_passwordcheck_hint"
            android:layout_marginHorizontal="10dp"
            android:textSize="22sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/logineditviewbackground"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
        <TextView
            android:id="@+id/register_textView_rule"
            android:textColor="@color/blue_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/login_registerRiyouCheck_title_1"/>
        <TextView
            android:id="@+id/register_textView_rule2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/login_registerRiyouCheck_title_2"/>

    </LinearLayout>

    <Button
        android:id="@+id/register_regButton"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:background="@drawable/loginbuttonbg"
        android:text="@string/login_registerButton_text"/>

</LinearLayout>