<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".Activity.SettingActivity.DollSettingActivity.DollNameSettingActivity">

    <ImageButton
        android:id="@+id/dollSettingName_ImageButton_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/backicon"
        android:background="@color/grey"/>
    
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_dollName_title"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="90dp"/>

    <EditText
        android:id="@+id/nameInputBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/nameInputPleaseHint"
        android:textAlignment="center"
        android:background="@drawable/edittextbackground"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/nextbutton_background"
        android:textSize="24sp"
        android:text="@string/save_button_text"
        android:layout_gravity="center"
        android:paddingHorizontal="50dp"
        android:layout_marginTop="120dp"
        android:textColor="@color/white"/>

</LinearLayout>