<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".Activity.SettingActivity.DollSettingActivity.DollIconSettingActivity">

    <ImageButton
        android:id="@+id/dollSettingIcon_ImageButton_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/backicon"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/setting_dollIcon_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp" />

    <FrameLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/ImageViewNowIcon"
            android:layout_width="85dp"
            android:layout_gravity="center"
            android:layout_height="85dp"/>

        <ImageView
            android:id="@+id/frame"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

    </FrameLayout>

    <TextView
        android:id="@+id/frame_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginLeft="30dp"
        android:text="@string/setting_dollIcon_frame"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="80dp"
        android:background="@drawable/edittextbackground"/>

    <com.example.sotsugyou.MyLinearLayout.FlowRadioGroup
        android:id="@+id/flowradioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/doll_setting_icon_frameR1"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:button="@null"
                android:drawableStart="@drawable/radio_selector"/>

            <RadioButton
                android:id="@+id/doll_setting_icon_frameR2"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:drawableStart="@drawable/radio_selector"
                android:button="@null" />

            <RadioButton
                android:id="@+id/doll_setting_icon_frameR3"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:drawableStart="@drawable/radio_selector"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:button="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/doll_setting_icon_frameR4"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:button="@null"
                android:drawableStart="@drawable/radio_selector" />

            <RadioButton
                android:id="@+id/doll_setting_icon_frameR5"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:drawableStart="@drawable/radio_selector"
                android:button="@null" />

            <RadioButton
                android:id="@+id/doll_setting_icon_frameR6"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:drawableStart="@drawable/radio_selector"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:button="@null" />

        </LinearLayout>


    </com.example.sotsugyou.MyLinearLayout.FlowRadioGroup>

    <TextView
        android:id="@+id/background_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginLeft="30dp"
        android:text="@string/setting_dollIcon_background"
        android:textColor="@color/white" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="80dp"
        android:background="@drawable/edittextbackground"/>

    <com.example.sotsugyou.MyLinearLayout.FlowRadioGroup
        android:id="@+id/backgroundGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/backgroundRb1"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:button="@null"
                android:drawableStart="@drawable/radio_selector"/>

            <RadioButton
                android:id="@+id/backgroundRb2"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:drawableStart="@drawable/radio_selector"
                android:button="@null"/>

            <RadioButton
                android:id="@+id/backgroundRb3"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:drawableStart="@drawable/radio_selector"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:button="@null"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/backgroundRb4"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:button="@null"
                android:drawableStart="@drawable/radio_selector"/>

            <RadioButton
                android:id="@+id/backgroundRb5"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:drawableStart="@drawable/radio_selector"
                android:button="@null"/>

            <RadioButton
                android:id="@+id/backgroundRb6"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:drawableStart="@drawable/radio_selector"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:button="@null"/>

        </LinearLayout>


    </com.example.sotsugyou.MyLinearLayout.FlowRadioGroup>



    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/nextbutton_background"
        android:textSize="24sp"
        android:text="@string/next"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingHorizontal="50dp"
        android:textColor="@color/white"/>

</LinearLayout>